--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'application'
 }
 
 group 'org.example'
@@ -13,4 +14,19 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    compile 'net.sourceforge.htmlcleaner:htmlcleaner:2.23'
+    compile 'com.google.code.gson:gson:2.8.6'
+}
+
+mainClassName = 'de.mzte.mcserverinfo.Main'
+
+//create a single Jar with all dependencies
+task fatJar(type: Jar) {
+    clean
+    manifest {
+        attributes 'Main-Class': mainClassName
+    }
+    archiveBaseName = 'export'
+    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
+    with jar
 }
