--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,5 +1,5 @@
-#Sun Apr 19 23:12:27 CEST 2020
-distributionUrl=https\://services.gradle.org/distributions/gradle-6.3-bin.zip
+#Wed Apr 22 11:49:52 CEST 2020
+distributionUrl=https\://services.gradle.org/distributions/gradle-6.3-all.zip
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStorePath=wrapper/dists
